--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
                   <p class="card-text">This is a Twitter based project.</p>
                   <p class="card-text"><small class="text-muted">
                       Test Login Account<br>
-                      Email:makaylaalbright121@gmail.com<br>
+                      Email:jyekesho@gmail.com<br>
                   </small></p>
                   <a href="#" target="_blank" class="btn btn-secondary">Website Link</a>
-                  <a href="#" target="_blank" class="btn btn-secondary">github Link</a>
+                  <a href="https://github.com/jyekesho/portfolio" target="_blank" class="btn btn-secondary">github Link</a>
                 </div>
               </div>
             </div>
@@ -84,7 +84,7 @@
   
                   </small></p>
                   <a href="#" target="_blank" class="btn btn-secondary">Website Link</a>
-                  <a href="#" target="_blank" class="btn btn-secondary">github Link</a>
+                  <a href="https://github.com/jyekesho/portfolio" target="_blank" class="btn btn-secondary">github Link</a>
                 </div>
               </div>
             </div>
