--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
          <div class="vocation">Web devloper</div>
          <div class="skills">Python / HTML / CSS </div>
          <p>
-          An Spa that display subreddit data from Reddit for a specified  time period .As the front-end developer, I worked 
+          As the front-end developer, I worked on Html, css, Java script and python,tech has always been my passion
          </p>
            <div class="email">jyekesho@gmail.com</div>
            <div class="icon">
